Update AIService